<resources>
    <string name="app_name">Equisafe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greetings_home">Welcome, %s !</string>
    <string name="disaster_name">- %s</string>
    <string name="disaster_count">%d times</string>
    <string name="help_string">\n%s</string>
    <string name="correct_answer">%s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="natural_disasters_that_have_happened">Natural disasters that have happened in %s</string>
    <string name="empty_disaster">There has never been a natural disaster in %s</string>
    <string name="nice_try">Nice Try</string>
    <string name="incorrect">INCORRECT</string>
    <string name="disaster_quest">Disaster Quest</string>
    <string name="crisis_chronicles">Crisis Chronicles</string>
    <string name="protect_learn_and_triumph_over_disasters">Protect, Learn, and Triumph over Disasters!</string>
    <string name="unraveling_nature_s_fury_one_chapter_at_a_time">Unraveling Nature\'s Fury, One Chapter at a Time</string>
    <string name="about_equisafe">About Equisafe</string>
    <string name="button_back">back page icon</string>
    <string name="logo_philosophy">Logo Philosophy</string>
    <string name="logo_equisafe">logo_equisafe</string>
    <string name="logo_about_equisafe">logo about equisafe</string>
    <string name="description">Description</string>
    <string name="description_app">EquiSafe is an innovation in increasing understanding related to natural disasters for children with disabilities through a video based application with the sign language translate feature as efforts to reduce the impact of natural disasters on vulnerable groups. this app contains multisensory educational animated videos about natural disaster mitigation able to increase the literacy of children with disabilities, so understanding related to disaster mitigation can be improved and the effects arising from disasters nature can be minimized.</string>
    <string name="articles">Articles</string>
    <string name="save_password">Save Password</string>
    <string name="new_password">New Password</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="old_password">Old Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="reading_more">Reading More</string>
    <string name="detail_article">Detail Article</string>
    <string name="image_article_reading_more">image article reading more</string>
    <string name="_1_month_ago">1 month ago</string>
    <string name="spacer">|</string>
    <string name="thumbnail_video">thumbnail video</string>
    <string name="icon_play">icon play</string>
    <string name="detail_video">Detail Video</string>
    <string name="icon_favorite">icon favorite</string>
    <string name="_102_views">102 Views</string>
    <string name="save_changes">Save Changes</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favorites_video">Favorites Video</string>
    <string name="empty_favorite">There are no user-favorite videos</string>
    <string name="games">Games</string>
    <string name="suggested_for_you">Suggested for you</string>
    <string name="games_crisis_chronicles">Games Crisis Chronicles</string>
    <string name="description_game_chronicles">Navigate the Chaos: Crisis Chronicle Awaits!</string>
    <string name="button_play_game">start a crisis chronicles game</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="help_center">Help Center</string>
    <string name="contact_us">Contact Us</string>
    <string name="we_are_ready_to_help_anytime_and_anywhere_please_contact_us_via">We are ready to help anytime and anywhere. Please contact us via:</string>
    <string name="button_help_call">Help Call</string>
    <string name="sms_help">Sms Help</string>
    <string name="email_help">email help</string>
    <string name="whatsapp_help">whatsapp help</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="welcome_user">Welcome User</string>
    <string name="sign_to_continue">Sign to continue</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="map_disaster">map disaster</string>
    <string name="disaster_maps">Disaster Maps</string>
    <string name="change">Change</string>
    <string name="set_emergency">Set Emergency</string>
    <string name="sign_up">Sign up</string>
    <string name="emergency">Emergency</string>
    <string name="area_change_emergency">area change emergency</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account_sign_in">Already have account? Sign in</string>
    <string name="elipse_background">elipse background</string>
    <string name="avatar_picture">avatar picture</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="need_emergency_support">Need emergency support?</string>
    <string name="press_the_button_below">Press the button below</string>
    <string name="call_action">call action</string>
    <string name="edit_emergency_contact">Edit Emergency Contact</string>
    <string name="article_page">Article Page</string>
    <string name="favorite_page">Favorite page</string>
    <string name="games_page">Games Page</string>
    <string name="divider">divider</string>
    <string name="features">Features</string>
    <string name="banner_empowering_difabel_with_disaster_resilience_through_inclusive_learning">Banner Empowering difabel with disaster resilience through inclusive learning</string>
    <string name="last_played">Last Played</string>
    <string name="favorite">Favorite</string>
    <string name="did_you_know">Did you know?</string>
    <string name="volume_up">volume up</string>
    <string name="image_equisafe_mascot">Image equisafe mascot</string>
    <string name="next_page">next page</string>
    <string name="intro_one">Halo, my name is Puffy. I am a knight whose duty is to maintain peace on earth.</string>
    <string name="intro_three">Come on, help Puffy protect the earth from Mr. Windy by working on short questions!</string>
    <string name="intro_two">Danger! Earth is under threat from Mr. Windy!</string>
    <string name="learning_material">Learning Material</string>
    <string name="search_here">Search here</string>
    <string name="search">Search</string>
    <string name="list_video_material">list video material</string>
    <string name="about_app">About App</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="icon_about_app">icon about app</string>
    <string name="icon_help">icon help</string>
    <string name="icon_change_password">icon change password</string>
    <string name="icon_edit_profile">icon edit profile</string>
    <string name="version_2_0">Version 2.0</string>
    <string name="your_answer">Your Answer:</string>
    <string name="check_answer">check answer</string>
    <string name="good_job">Good Job!</string>
    <string name="next_question">next question</string>
    <string name="answer_here">Answer Here…</string>
    <string name="correct_answer_icon">correct answer icon</string>
    <string name="perfect">PERFECT!</string>
    <string name="yeay_puffy_success_save_the_earth">YEAY! PUFFY SUCCESS SAVE THE EARTH</string>
    <string name="icon_score">icon score</string>
    <string name="icon_incorrect">icon incorrect</string>
    <string name="home_page">home page</string>
    <string name="correct">CORRECT</string>
    <string name="score">SCORE</string>
    <string name="image_article">image article</string>
    <string name="image_card_game">image card game</string>
    <string name="icon_star">icon star</string>
    <string name="try_again">Try Again</string>
    <string name="set_contact_emergency">Set Contact Emergency</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="save">Save</string>
    <string name="close_pop_up_dialog">close pop up dialog</string>
    <string name="background">background</string>
    <string name="learning">Learning</string>
    <string name="profile">Profile</string>
    <string name="emergencynumber">+62%1$s</string>
    <string name="phone_numebr">+62%1$s</string>
</resources>