<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.about.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_toolbar_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/SemiBoldWhite16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_equisafe" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/icon_back"
            android:contentDescription="@string/button_back" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_title"
        style="@style/SemiBoldGreen18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginStart="28dp"
        android:text="@string/logo_philosophy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDetail" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <ImageView
            android:id="@+id/iv_about1"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:layout_marginEnd="42dp"
            android:contentDescription="@string/logo_equisafe"
            android:src="@drawable/logo_about1"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/iv_about2"
            android:layout_width="186dp"
            android:layout_height="130dp"
            android:layout_gravity="end"
            android:src="@drawable/logo_about2"
            android:contentDescription="@string/logo_about_equisafe" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_description"
        style="@style/SemiBoldGreen18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        style="@style/Regular14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description_app"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        tools:ignore="VisualLintLongText" />

</androidx.constraintlayout.widget.ConstraintLayout>