<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.learning.DetailLearningActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/SemiBold18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/detail_video" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/button_back"
            android:src="@drawable/icon_back_green" />
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/frame_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDetail"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_detail_material"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:clickable="true"
            android:scaleType="fitXY"
            android:src="@drawable/thumbnailex2"
            android:contentDescription="@string/thumbnail_video"
            app:shapeAppearanceOverlay="@style/RoundedSquare16dp"
            android:focusable="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_play"
            android:layout_gravity="center"
            android:padding="10dp"
            android:contentDescription="@string/icon_play"
            android:background="@drawable/bg_button_play"
            />

    </FrameLayout>


    <TextView
        android:id="@+id/tv_detail_title"
        style="@style/SemiBold18sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="@+id/frame_img"
        app:layout_constraintStart_toStartOf="@+id/frame_img"
        app:layout_constraintTop_toBottomOf="@+id/frame_img"
        tools:text="Flood alert!, causes and how to deal with it!" />

    <TextView
        android:id="@+id/tv_detail_views"
        style="@style/Medium12spGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_102_views"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_created"
        app:layout_constraintStart_toStartOf="@+id/frame_img"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_created"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/divider"
        style="@style/Medium12spGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/spacer"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_created"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_views"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_created"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_detail_created"
        style="@style/Medium12spGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_1_month_ago"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/icon_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_border_heart"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_created"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_created"
        android:contentDescription="@string/icon_favorite"
        app:tint="@color/colorTextRed" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/Medium16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_views"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_views" />

    <TextView
        android:id="@+id/tv_detail_desc"
        style="@style/Regular12sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/frame_img"
        app:layout_constraintStart_toStartOf="@+id/tv_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        tools:text="Causes and ways to mitigate flooding! You must know!
Floods are events where water overflows and covers land areas. The causes of flooding can stem from human factors, such as the careless dumping of rubbish that clogs river flows, or natural factors, such as heavy rain and rising sea levels. Floods can often lead to significant losses, damaging property, public facilities, and even threatening human safety. So, what are the mitigation steps needed to overcome and reduce the risk of flooding? Come on, watch the following video to find the answer!"
        tools:ignore="VisualLintLongText" />

</androidx.constraintlayout.widget.ConstraintLayout>